--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    ":dependencyDashboard""
+    ":dependencyDashboard"
   ],
   "lockFileMaintenance": { "enabled": true }
 }
