renovate: enable nix

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,8 @@
     "config:recommended",
     ":dependencyDashboard"
   ],
+  "nix": {
+    "enabled": true
+  },
   "lockFileMaintenance": { "enabled": true }
 }
