--- a/.github/workflows/update-extensions.yml
+++ b/.github/workflows/update-extensions.yml
@@ -3,7 +3,10 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron:  '51 2 * * *'
+    - cron: "51 2 * * *"
+permissions:
+  pull-requests: write
+  contents: write
 jobs:
   update-extensions:
     runs-on: ubuntu-latest
@@ -15,6 +18,8 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       - run: ./modules/nixos-wiki/update-extensions.py ./modules/nixos-wiki/extensions.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
