add Translate and UniversialLanguageSelector

--- a/modules/nixos-wiki/extensions.json
+++ b/modules/nixos-wiki/extensions.json
@@ -1,5 +1,7 @@
 {
   "MobileFrontend": {},
   "DarkMode": {},
-  "QuickInstantCommons": {}
+  "QuickInstantCommons": {},
+  "Translate": {},
+  "UniversalLanguageSelector": {}
 }
