First draft of adding ExternalData

--- a/modules/nixos-wiki/extensions.json
+++ b/modules/nixos-wiki/extensions.json
@@ -3,5 +3,6 @@
   "DarkMode": {},
   "QuickInstantCommons": {},
   "Translate": {},
-  "UniversalLanguageSelector": {}
+  "UniversalLanguageSelector": {},
+  "ExternalData": {}
 }
