switch from gitlab state provider to encrypted local state provider

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -9,3 +9,8 @@ creation_rules:
           - *joerg
           - *lassulus
           - *nixos-wiki2
+  - path_regex: targets/admins/secrets/*
+    key_groups:
+      - age:
+          - *joerg
+          - *lassulus
