--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -1,4 +1,4 @@
-name: "Update mediawiki extensions"
+name: "Update wiki"
 on:
   repository_dispatch:
   workflow_dispatch:
@@ -20,8 +20,10 @@ jobs:
       - run: ./modules/nixos-wiki/update-extensions.py ./modules/nixos-wiki/extensions.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run:
+          nix flake update
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
-          title: Update mediawiki extensions
+          title: Update wiki extensions
           labels: merge-queue
