update treefmt settings

--- a/.envrc.private-template
+++ b/.envrc.private-template
@@ -1,2 +1,3 @@
+# shellcheck shell=bash
 # https://console.hetzner.cloud/projects/2643361/security/tokens
 export HCLOUD_TOKEN='<your-hetzner-token>'
