move all extensions to extension.json

--- a/modules/nixos-wiki/extensions.json
+++ b/modules/nixos-wiki/extensions.json
@@ -3,5 +3,16 @@
   "DarkMode": {},
   "QuickInstantCommons": {},
   "Translate": {},
-  "UniversalLanguageSelector": {}
+  "UniversalLanguageSelector": {},
+  "Description2": {},
+  "Mermaid": {
+    "type": "github",
+    "github_repo": "SemanticMediaWiki/Mermaid",
+    "github_type": "tag"
+  },
+  "AuthManagerOAuth": {
+    "type": "github",
+    "github_repo": "mohe2015/AuthManagerOAuth",
+    "github_type": "release"
+  }
 }
